--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,10 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
