--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
+spring.liquibase.enabled=true
+spring.liquibase.change-log=file:db/dbchangelog.xml
