--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=file:db/dbchangelog.xml
+spring.devtools.livereload.enabled=true
